Fix spacing of details (#880)

--- a/src/main/webapp/js/style.css
+++ b/src/main/webapp/js/style.css
@@ -26,8 +26,8 @@ h1 {
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  margin-left: 0.65rem;
-  margin-bottom: 1.25rem;
+  margin-left: 0.25rem;
+  margin-bottom: 0.875rem;
   margin-top: -0.25rem;
 
   & > div {
